--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@types/selenium-webdriver": "^4.35.1",
     "bun": "^1.2.23",
+    "chromedriver": "^141.0.0",
     "install": "^0.13.0",
-    "selenium-webdriver": "^4.35.0"
+    "selenium-webdriver": "^4.36.0"
   }
 }
